--- a/app/src/app/request-handler/request-handle.component.html
+++ b/app/src/app/request-handler/request-handle.component.html
@@ -2,36 +2,42 @@
   <div class="main">
     <div class="header">
       <img src="/pay/assets/icon-512x512.png" class="logo" alt="KBC LOGO"/>
+      <p class="title"><b>KBC</b></p>
     </div>
     <div class="content">
       <div class="left-content">
-        <p>Total Amount to pay : </p>
-        <p>Merchant to pay : </p>
-      </div>
-      <div class="left-content">
-        <p>{{amount}}, {{currency}}</p>
-        <p>{{merchantName}}</p>
+        <p class="amount">199,25 Eur</p>
       </div>
     </div>
-    <div class="cards">
-      <form [formGroup]="requestHandleForm">
-        <label>List of available cards</label>
-        <mat-radio-group required
-          aria-labelledby="example-radio-group-label"
-          class="example-radio-group"
-                         formControlName="selectedCard">
-          <mat-radio-button class="example-radio-button" *ngFor="let card of creditCards" [value]="card.cardNumber">
-            {{card.cardNumber | creditCardPipe}}
-            <span>
-              <img src="/pay/assets/icon-512x512.png" class="cardlogo" alt="KBC LOGO"/>
-            </span>
-          </mat-radio-button>
-        </mat-radio-group>
-      </form>
+    <!--<div class="cards">-->
+      <!--<form [formGroup]="requestHandleForm">-->
+        <!--<label>List of available cards</label>-->
+        <!--<mat-radio-group required-->
+          <!--aria-labelledby="example-radio-group-label"-->
+          <!--class="example-radio-group"-->
+                         <!--formControlName="selectedCard">-->
+          <!--<mat-radio-button class="example-radio-button" *ngFor="let card of creditCards" [value]="card.cardNumber">-->
+            <!--{{card.cardNumber | creditCardPipe}}-->
+            <!--<span>-->
+              <!--<img src="/pay/assets/icon-512x512.png" class="cardlogo" alt="KBC LOGO"/>-->
+            <!--</span>-->
+          <!--</mat-radio-button>-->
+        <!--</mat-radio-group>-->
+      <!--</form>-->
+    <!--</div>-->
+    <p class="pay-title">Pay from</p>
+    <div class="account-details">
+      <div class="image">
+        <img src="/pay/assets/person.png" class="logo-person" alt="KBC LOGO"/>
+      </div>
+      <div class="payment-details">
+        <span>Anne Simons</span> <br>
+        <span>BE12345678890</span> <br>
+        <span>840,02 EUR</span>
+      </div>
     </div>
     <div class="bottom">
-      <button mat-flat-button color="warn" class="cancel">Cancel</button>
-      <button mat-flat-button color="primary" class="cancel" [disabled]="!requestHandleForm.valid">Confirm</button>
+      <button class="signin">Sign In</button>
     </div>
   </div>
 </div>
