--- a/app/src/app/request-handler/request-handle.component.scss
+++ b/app/src/app/request-handler/request-handle.component.scss
@@ -6,6 +6,11 @@
   width: 100%;
 }
 
+.main {
+  width: 960px;
+  margin: 0 auto;
+}
+
 .header{
   text-align: center;
 }
@@ -31,7 +36,7 @@
 }
 
 .logo {
-  width: 6%;
+  width: 10%;
 }
 
 .bottom {
@@ -45,4 +50,49 @@
 
 .cardlogo{
   width: 2%;
+}
+
+.amount {
+  font-size: 28px;
+  color: #003665;
+  padding-top: 30px;
+}
+
+.title {
+  color: #003665;
+}
+
+.pay-title {
+  color: #aca6a0;
+}
+
+.logo-person{
+  width:50px;
+  height: 50px;
+  border: 1px solid #fafbfc;
+  border-radius: 10px;
+}
+
+.image{
+  width: 50px;
+  float: left;
+}
+
+.payment-details {
+  width: 94%;
+  float: right;
+}
+
+.payment-details span {
+  color: #003665;
+}
+
+.signin {
+  width:200px;
+  text-align: center;
+  background-color: #00aeef;
+  border-radius: 15px;
+  color: #fff;
+  height: 46px;
+  border:none;
 }
