Input is not working from service-worker

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,2 +1,1 @@
-<payments-request-handle></payments-request-handle>
-<router-outlet></router-outlet>
+<payments-request-handle [merchant]=merchantName></payments-request-handle>
