--- a/app/src/app/request-handler/request-handle.component.html
+++ b/app/src/app/request-handler/request-handle.component.html
@@ -2,7 +2,7 @@
   <div class="main">
     <div class="header">
       <img src="/pay/assets/icon-512x512.png" class="logo" alt="KBC LOGO"/>
-      <p class="title"><b>KBC</b></p>
+      <p class="title"><b>{{merchant}}</b></p>
     </div>
     <div class="content">
       <div class="left-content">
